2001-03-29  John Harper  <jsh@eazel.com>

	Fixed an ICCCM compliance problem:

	* functions.c, events.c (configure_request, Fresize_window_to,
	Fmove_resize_window_to): don't send a synthetic configure
	notify event if the window was resized (in which case a real
	configure notify was generated)

2001-03-21  John Harper  <jsh@eazel.com>

	* fonts.c (x_create_font_set): reverted the last change to
	merge calls to setlocale (). (I had failed to realize that the
	result of calling setlocale describes the current locale not
	the original one). Also added some code to copy the returned
	locale name since it's in a static buffer

2001-03-19  John Harper  <jsh@eazel.com>

	* windows.c, sawmill.h: moved XUrgencyHint definition to
	sawmill.h

2001-03-14  John Harper  <jsh@eazel.com>

	* version 0.38

2001-03-09  John Harper  <jsh@eazel.com>

	* cursors.c (cursors_init): set default_cursor to Qnil when in
	batch mode (to prevent Fdefault_cursor () returning a null
	value)

2001-03-07  John Harper  <jsh@eazel.com>

	* functions.c (Fx_raise_window, Fx_lower_window): when these
	functions are given a sibling, check if it has been destroyed.
	If so, do nothing to the stacking order

	(This should fix a failed assertion that Ramiro and Duane were
	seeing)

2001-02-26  John Harper  <jsh@eazel.com>

	* keys.c (wm_mod): changed default value from EV_MOD_META to
	ControlMask. Part of my fix to bug 7073

2001-02-19  John Harper  <jsh@eazel.com>

	* version 0.37.3

	* windows.c (install_window_frame, remove_window_frame): only
	do the reparenting if the window hasn't been destroyed

	* stacking-list.c (restack_window): just return immediately if
	the window has already been destroyed

	* stacking-list.c (window_in_stacking_list_p): new predicate,
	used to replace the assert_window_[not_]in_stacking_list
	functions (which have been deleted)

2001-02-18  John Harper  <jsh@eazel.com>

	* functions.c (Frestack_windows, Fx_raise_window,